RR.SEBRAE.CLUSTER/eventos-sebrae/consulta-cpf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consulta-cpf-service
  namespace: eventos-sebrae
spec:
  type: LoadBalancer
  selector:
    app: consulta-cpf
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: proxy
      port: 8000
      targetPort: 8000
